EXTRA_DIST = \
conf.py \
base.py \
util.py \
run-tests.py \
01-basic.py \
02-MissingProtocol.py \
03-UnknownMethod.py \
04-UnknownMethod+MissingProtocol.py \
05-Unknown-Protocol.py \
06-Wrong-Protocol.py \
07-Missing-Host.py \
08-Broken-Request.py \
09-DotDot.py \
10-Dot.py \
11-HeaderEntryTwice.py \
12-Broken-Key.py \
13-Broken-Key2.py \
14-Broken-Key3.py \
15-CGI-simple.py \
16-CGI-pathinfo.py \
17-CGI-pathinfo2.py \
18-CGI-pathinfo3.py \
19-HeadMethod.py \
20-VirtualHost.py \
21-VirtualHost2.py \
22-NoHost.py \
23-Host.py \
24-Host+Port.py \
25-Host-Broken.py \
26-Host-Broken-Dot.py \
27-Missing-File.py \
28-Missing-File+Param.py \
29-Post+Without-lenght.py \
30-Post+urlencoded.py \
31-Post+urlencoded2.py \
32-DirIndex+Redir.py \
33-DirIndex.py \
34-DirIndex2.py \
35-PHP-simple.py \
36-DocumentRoot-common.py \
37-PHP-post.py \
38-PHP-get.py \
39-Auth-Basic.py \
40-Auth-Basic2.py \
41-Auth-Basic3.py \
42-Pipelining.py \
43-Pipelining2.py \
44-Home.py \
45-Home2.py \
46-Redir.py \
47-Redir2.py \
48-NN.py \
49-NN-broken.py \
50-HeadBody.py \
51-10kRandom.py \
52-50kRandom.py \
53-100kRandom.py \
54-ContentRange.py \
55-ContentRange2.py \
56-ContentRange3.py \
57-ContentRange4.py \
58-ContentRange-Double.py \
59-ContentRange-Double2.py \
60-BigPost.py \
61-PAM.py \
62-PAM2.py \
63-DocumentRoot.py \
64-DirectoryIndex.py \
65-DirectoryIndex2.py \
66-DirectoryIndex3.py \
67-PathInfo.py \
68-PathInfo2.py \
69-PathInfo3.py \
70-Inherit.py \
71-Inherit2.py \
72-Inherit3.py \
73-Access.py \
74-Access2.py \
75-AccessRange.py \
76-AccessRange2.py \
77-AccessRange3.py \
78-AccessAny.py \
79-Extension.py \
80-Extension2.py \
81-DocumentRoot-Common-index.py \
82-Auth-header.py \
83-RedirParam.py \
84-RedirParamShow.py \
85-AuthUsers.py \
86-AuthUsers2.py \
87-Location.py \
88-CGI-envs.py \
89-gzip-encoding.py \
90-Digest.py \
91-Digest2.py \
92-Digest3.py \
93-InvalidLinks.py

test:
	./run-tests.py
