## Cherokee: Makefile.am  -*- makefile -*-

cherokeewwwdir = "@WWW_ROOT@"
cherokeewww_DATA = \
index.html

cherokeewwwimagesdir = "@WWW_ROOT@/images"
cherokeewwwimages_DATA = \
top-layer.png \
cherokee-logo.png \
powered_by_cherokee.png

EXTRA_DIST = \
$(cherokeewww_DATA) \
$(cherokeewwwimages_DATA) 

